--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+//    id 'com.google.secrets_gradle_plugin' version '0.5'
 }
 
 android {
@@ -35,7 +36,8 @@ dependencies {
 //    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    implementation 'com.google.android.gms:play-services-maps:10.0.1'
-    implementation 'com.google.android.gms:play-services-maps:10.0.1'
+//    implementation 'com.google.android.gms:play-services-maps:10.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
